[project]
name = "BetterUIControls"
version = "2"
authors = [{ name = "Yeti" }]
description = "Enables your movement keys (like WASD) and your use key to control most menus. Also removes the game asking where you want to equip gear and secondary use to quickly unequip items."

[tool.sdkmod]
name = "Better UI Controls"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/BetterUIControls/BetterUIControls.sdkmod"
version = "1"
