[project]
name = "BetterUIControls"
version = "2"
authors = [{ name = "Yeti" }]
description = """
This mod will let you use your movement keys (in my case WASD) to control a bunch of menus. \
It also enables your Use key (in my case E) to select items in menus. The mod will automatically adjust to your keys.\
Current Working Menus:\
Status Menus (Backpack, Missions, etc)\
Fast Travel\
Vending Machines\
Quest/Rewards\
Dialog Boxes, like the quit out screen\
Vehicle station, but only left and right on the first screen\
Stash Menus\\
Secondary Features:<br/><br/>You can hit your reload key on your weapons and gear to cycle if an item is favorited or trash<br/><br/>The main menu and pause menu now wrap, allowing you to quickly go to the top or bottom of the list<br/><br/>Alt Use to quick buy in vendors (including vendors like Earl)<br/><br/>Equipping gear from your backpack will no longer ask where you want to equip it<br/><br/>Quick Respec by hitting you reload key in the New U Menu
"""

[tool.sdkmod]
name = "Better UI Controls"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/BetterUIControls/BetterUIControls.sdkmod"
version = "1"
