[project]
name = "ItemLights"
version = "1"
authors = [{ name = "Yeti" }]
description = "Adds lights to items when they're on the ground. Options for how bright the lights are and their radius."

[tool.sdkmod]
name = "Item Lights"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"
