[project]
name = "PayToLoot"
version = "1"
authors = [{ name = "Yeti" }]
description = "Picking up ground loot is no longer free. They now cost as much as they would in a vendor."
dependencies=['UserFeedback >= 1.6']

[tool.sdkmod]
name = "Pay To Loot"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/PayToLoot/PayToLoot.sdkmod"
version = "1"
coop_support="Unknown"
