[project]
name = "WeaponProf"
version = "1"
authors = [{ name = "Yeti" }]
description = "This mod ports weapon proficiencies from Borderlands 1 without any changes. Get a kill while holding a specific weapon and the proficiency goes up based on how much xp the enemy was worth. While gunzerkering, the xp is split between the 2 weapons. You can see your progress in the challenges tab of the badass rank screen, turning off badass rank does not affect this mod.  I've decided to show all 5 buffs for the sniper. In Borderlands 1 it only shows 3 buffs in the menu, but it actually buffs all 5. I've mostly used this mod with Blassic﻿ which brings more of a Borderlands 1 feel to the game. Options include a choice between level 50 and 80 for the cap and an option to turn off sals left hand buffs. (Turning off the left hand buffs does not affect the xp gain while gunzerking)"

[tool.sdkmod]
name = "Weapon Proficiencies"
supported_games = ["BL2"]
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
coop_support = "HostOnly"
download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/WeaponProf/WeaponProf.sdkmod"
version = "1"
