[project]
name = "WeaponProf"
version = "1"
authors = [{ name = "Yeti" }]
description = "This mod ports weapon proficiencies from Borderlands 1 without any changes."

[tool.sdkmod]
name = "Weapon Proficiencies"
supported_games = ["BL2"]
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
coop_support = "HostOnly"
download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/WeaponProf/WeaponProf.sdkmod"
version = "1"
