[project]
name = "find_actors"
version = "1"
authors = [{ name = "Yeti" }]
description = "Find Actors in a certain area."

[tool.sdkmod]
name = "Find Actors"
supported_games = ["BL1", "BL2", "AoDK", "TPS", "BL3", "WL"]
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
coop_support = "HostOnly"
download = ""
version = "1"