[project]
name = "find_actors"
version = "1.1"
authors = [{ name = "Yeti" }]
description = "Find Actors in a certain area. Use the command find_actors class distance. class accepts any for any class."

[tool.sdkmod]
name = "Find Actors"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/bl2-willow2-sdkmods/raw/refs/heads/main/find_actors/find_actors.sdkmod"
version = "1.1"
